--- a/src/pages/edit/[id].astro
+++ b/src/pages/edit/[id].astro
@@ -32,12 +32,12 @@ if (!form) {
             </a>
             <div class="hidden sm:block w-px h-8 bg-gray-300"></div>
             <div class="flex flex-col">
-              <div class="text-sm text-gray-600">
+              <h1 class="text-sm text-gray-600">
                 <span class="font-medium">Editing:</span> {form.title}
-              </div>
-              <div class="text-xs text-gray-500">
+              </h1>
+              <h2 class="text-xs text-gray-500">
                 Category: {form.category}
-              </div>
+              </h2>
             </div>
           </div>
           
